Squashed 'client/' changes from 703fa3a..cc102b1
cc102b1 исправила ссылку для фото
68aeac9 исправила ссылку для фото
b25005d исправила ссылку для фото
311bdee исправила ссылку для фото
91064e4 Переименовала сервис
b9f87ed #44201113. Реализация загрузки фото

git-subtree-dir: client
git-subtree-split: cc102b1306f7099417793da9ae89470bb5ff2865

--- a/cargo-way/src/styles/blocks/_fromGroup.scss
+++ b/cargo-way/src/styles/blocks/_fromGroup.scss
@@ -21,6 +21,7 @@
         }
         @include m.tablet {
             width: 100%;
+            text-align: center;
         }
     }
 
@@ -48,6 +49,10 @@
         &--contact {
             justify-content: center;
             width: 40%;
+        }
+
+        &--photo {
+            width: 50%;
         }
 
         // &--driver {
@@ -88,5 +93,17 @@
         // @include m.tablet {
         //     align-items: center;
         // }
+    }
+
+    &--photo {
+        max-width: 45%;
+        gap: 4.5rem;
+        justify-self: start;  
+        margin: 0 0 2.2rem 0;
+
+        @include m.mobile {
+            gap: 2.2rem;
+            margin-bottom: 1rem;
+        }
     }
 }
