--- a/cargo-way/src/styles/blocks/_popup.scss
+++ b/cargo-way/src/styles/blocks/_popup.scss
@@ -5,9 +5,10 @@
 .popupWithInput,
 .popupWithChoice,
 .popupWithRating {
-    position: fixed;
-    top:15%;
-    left: 27%;
+    // position: fixed;
+    margin: 5% auto;
+    // top:15%;
+    // left: 27%;
     z-index: 999;
     max-width: 50%;
     max-height: 65%;
